# snaplink-prompt-contest

api/: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 20260415_0001_create_user_table.py  20260418_0002_add_chat_tables.py  20260420_0003_add_usage_ledger.py  20260425_0004_add_history_thought_signature.py  20260425_0005_add_usage_raw_buckets.py  20260427_0006_add_chat_title_and_soft_delete_owner.py  20260509_0007_add_final_prompt_submission.py  20260513_0008_add_history_image_lookup_index.py
api/app/: __init__.py  main.py
api/app/core/: auth.py  config.py
api/app/db/: base.py  session.py
api/app/models/: __init__.py  chat.py  final_prompt_submission.py  history.py  message.py  usage_ledger.py  user.py
api/app/routes/: __init__.py  admin.py  chat.py  final_submission.py  shared_image.py  signup.py  usage.py
api/app/schemas/: __init__.py  chat.py  usage.py  user.py
api/app/services/: gemini.py  storage.py  usage.py
api/tests/: conftest.py  test_auth.py  test_signup.py
client/: .env.example  .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.js
client/.orig_css/: App.css  Sidebar.css
client/src/: App.jsx  App.tsx  index.css  types.ts
client/src/components/Admin/: AdminChatsPage.tsx
client/src/components/ChatPanel/: ChatPanel.css  ChatPanel.jsx  ChatPanel.tsx
client/src/hooks/: useAdminImage.ts  useChat.js  useChat.ts
client/src/services/: api.js  api.ts  auth.ts
client/src/utils/: s3.ts
(+15 files in other folders)
